--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Dallin Sharp</h1>
     <hr>
     <h2>About me</h2>
-    <p>I'm a student at BYU Provo who enjoys programming and problem-solving.</p>
+    <p>I'm a student at BYU Provo who enjoys programming and problem-solving!</p>
     <h2>Projects</h2>
     <ul>
       <li>Family Map android application</li>
