--- a/index.html
+++ b/index.html
@@ -2,27 +2,46 @@
 <html>
   <head>
     <title>Dallin's Portfolio</title>
+    <link href='style.css' rel='stylesheet'/>
   </head>
 
   <body>
-    <h1>Dallin Sharp</h1>
-    <hr>
-    <h2>About me</h2>
-    <p>I'm a student at BYU Provo who enjoys programming and problem-solving!</p>
-    <h2>Projects</h2>
-    <ul>
-      <li>Family Map android application</li>
-      <li>Ticket to Ride multiplayer android game</li>
-      <li>Genetic algorithm approach to the traveling salesman problem</li>
-    </ul>
-    <h2>Experience</h2>
-    <p>Although I don't have work experience specific to programming, I have had
-      experience in leading small groups to success in the food service industry and construction!</p>
-    <h2>Contact Me</h2>
-    <ul>
-      <li>Github: <a href='https://github.com/DallinSharp'>DallinSharp</a></li>
-      <li>Email: dallin.sharp@gmail.com</li>
-      <li>LinkedIn: not on LinkedIn yet.</li>
-    </ul>
+
+
+      <h1>Dallin Sharp</h1>
+      <hr>
+          <div class='flexy'>
+      <div class='flex-content'>
+        <h2>About me</h2>
+        <p>I'm a student at BYU Provo who enjoys programming and problem-solving!</p>
+      </div>
+      <div class='flex-content'>
+        <h2>Projects</h2>
+        <ul>
+          <li>Family Map android application</li>
+          <li>Ticket to Ride multiplayer android game</li>
+          <li>Genetic algorithm approach to the traveling salesman problem</li>
+        </ul>
+      </div>
+      <div class='flex-content'>
+        <h2>Experience</h2>
+        <p>Although I don't have work experience specific to programming, I have had
+          experience in leading small groups to success in the food service industry and construction!</p>
+      </div>
+      <div class='flex-content'>
+        <h2>Contact Me</h2>
+        <ul>
+          <li>Github: <a href='https://github.com/DallinSharp'>DallinSharp</a></li>
+          <li>Email: dallin.sharp@gmail.com</li>
+          <li>LinkedIn: not on LinkedIn yet.</li>
+        </ul>
+      </div>
+      <ul class='flex-content'>
+        <li><a href='https://www.amazon.com/'>Amazon</a></li>
+        <li><a href='https://www.gmail.com'>Gmail</a></li>
+        <li><a href='https://cas.byu.edu/cas/login?service=http%3A%2F%2Flearningsuite.byu.edu%2F'>Learningsuite</a></li>
+        <li><a href='https://www.youtube.com'>Youtube</a></li>
+      </ul>
+  </div>
   </body>
 </html>
